chart/couchdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
  namespace: livesync
spec:
  serviceName: couchdb
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: oleduc/docker-obsidian-livesync-couchdb:master
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
          readinessProbe:
            httpGet:
              path: /_up
              port: 5984
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_up
              port: 5984
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data
