chart/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: livesync
spec:
  selector:
    app: portal
  ports:
    - port: 8000
      targetPort: 8000
