chart/viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer
  namespace: livesync
spec:
  type: LoadBalancer
  selector:
    app: viewer
  ports:
    - port: 80
      targetPort: 8080
